oneplus-common: ConfigPanel: Add summary of button panel
Change-Id: Ic59304d47c904a67771aa5747508c519047ee292

--- a/configpanel/res/values/strings.xml
+++ b/configpanel/res/values/strings.xml
@@ -16,6 +16,8 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <string name="button_panel_summary">Swap buttons, notification slider</string>
+
     <!-- Notification slider -->
     <string name="notification_slider_category_title">Notification slider</string>
 
