--- a/configpanel/res/values-zh-rCN/strings.xml
+++ b/configpanel/res/values-zh-rCN/strings.xml
@@ -16,6 +16,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="button_panel_summary">交换按钮、三段式通知滑钮</string>
   <!-- Notification slider -->
   <string name="notification_slider_category_title">三段式通知滑钮</string>
   <string name="notification_slider_selection_dialog_title">动作</string>
